# IARC-2018

./: .gitignore  .gitignore_BACKUP_11741  .gitignore_BASE_11741  AirTrafficControl.py  README.md  startup.sh  thisGoesOnArduino.ino  thisGoesOnBrian.py
Collision/: Client.py  GazeboLidar.txt  ScanceRun.py  Scanse.py  ScanseRun.py  StateSync.py  altScan.py  altscan.py  dickbutt.txt  innocent.py  lidardata.txt.out  mav.parm  mav.tlog  mav.tlog.raw
Collision/Plugin/: CMakeLists.txt  LIDAR_plugin.cc.txt  README.txt
Control/: ATC.py
Face Detection/: 24calibnetparams  global_storage
Flight/: .PIDPitch.py.swp  .flightTest.py.swp  ATC.py  AutonomousFlight.py  Client.py  FileReadFly.py  FlightController.py  FlightSample.py  IARCDiveLand.py  IARCFly.py  IARCFlyReal.py  IARC_AI.py  IARC_follow_roomba.py  LIDARCollisionAvoidance.py  PID.py  Pseudocode.txt  Realsense.py  SerialSync.py  Sonar.py  ardupilot_gazebo_monitor.py  delta_distance_test.py  event_test.py  fixed_real_life_following_code.py  flightControl.py  flightTest.py  follow_roomba.py  gimbal_test.py  graph_class.py  imgui.ini  mav.parm  mav.tlog  mav.tlog.raw  move.py  move_py.py  move_testing.py  real_life_following_code.py  real_life_following_code.py.save  realsense.py  rl_converging_code.py  rollPitch.py  (+4 more)
Integration/: DroneState.py  StateSync.py  StateSyncMQ.py  brian.py  droneState.proto  droneState_pb2.py  imageServer.py  imageTest.py  main.py  requirements.text  roger.py  serverlog.txt  ssmqsender.py  sszmq.py  stateTester.py  stress.py  sync.py
Simulation/: README.md  Sim 10 180 2.html  Sim 10 180.html  (+2 more)
(+143 files in other folders)
